--- a/index.html
+++ b/index.html
@@ -3,3 +3,19 @@ layout: home
 title: FairPACS
 subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
 ---
+
+
+<h2>Details</h2>
+
+
+<h2>Sample Images</h2>
+
+<h2>Downloads</h2>
+
+<h2>Agreement</h2>
+
+<!-- <h2>Citation</h2> -->
+
+<h2>Acknowledge</h2>
+
+<h2>Contact</h2>
