--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@ layout: home
 title: FairPACS
 subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
 ---
-
+<style>
+        .container {
+            display: flex;
+            justify-content: space-between;
+        }
+        .column {
+            flex: 1;
+            margin: 0 10px;
+            text-align: left;
+        }
+    </style>
 
 <h2>Details</h2>
 
@@ -17,5 +27,102 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
 <!-- <h2>Citation</h2> -->
 
 <h2>Acknowledge</h2>
+  <div class="container">
+          <div class="column">
+              <p>Bosen Miao</p>
+              <p>Cairang Nima</p>
+              <p>Chen Zhang</p>
+              <p>Chenyang Zhang</p>
+          </div>
+          <div class="column">
+              <p>Chenxi Feng</p>
+              <p>Dayu Gan</p>
+              <p>Fan Wu</p>
+              <p>Fengting Wang</p>
+          </div>
+          <div class="column">
+              <p>Guanhong Su</p>
+              <p>Haiquan Yu</p>
+              <p>Haodong Qian</p>
+              <p>Haitao Huang</p>
+          </div>
+          <div class="column">
+              <p>Han Xiang</p>
+              <p>Hongfu Qi</p>
+              <p>Hui Liu</p>
+              <p>Jiabin Huang</p>
+          </div>
+          <div class="column">
+              <p>Jiajia Zhang</p>
+              <p>Jiahui Zhou</p>
+              <p>Jiamin Tang</p>
+              <p>Jiayu Zou</p>
+          </div>
+          <div class="column">
+              <p>Junjie Gao</p>
+              <p>Kejun Chen</p>
+              <p>Kangxian Lu</p>
+              <p>Lili Mu</p>
+          </div>
+          <div class="column">
+              <p>Liyan Liu</p>
+              <p>Liwen Zhu</p>
+              <p>Mingyu Yang</p>
+              <p>Peilin Cai</p>
+          </div>
+          <div class="column">
+              <p>Rouyi Hou</p>
+              <p>Sha Liu</p>
+              <p>Shuoyuan Jing</p>
+              <p>Siqi Tao</p>
+          </div>
+          <div class="column">
+              <p>Tianshuo Chen</p>
+              <p>Wenjie Yu</p>
+              <p>Wenkai Deng</p>
+              <p>Wentao Mou</p>
+          </div>
+          <div class="column">
+              <p>Xianxia Shi</p>
+              <p>Xicheng Fan</p>
+              <p>Xiling Wei</p>
+              <p>Xing Chen</p>
+          </div>
+          <div class="column">
+              <p>Xiru Ruan</p>
+              <p>Xueqing Liu</p>
+              <p>Yangyang Li</p>
+              <p>Yan Li</p>
+          </div>
+          <div class="column">
+              <p>Yanli Lin</p>
+              <p>Ying Tao</p>
+              <p>Yingqi Liang</p>
+              <p>Yingwen Shi</p>
+          </div>
+          <div class="column">
+              <p>Yingshuai Xu</p>
+              <p>Yixiao Wu</p>
+              <p>Yijing Dai</p>
+              <p>Yixiao Wu</p>
+          </div>
+          <div class="column">
+              <p>Yongxu Zhu</p>
+              <p>Yu Pang</p>
+              <p>Yuanqian Xiao</p>
+              <p>Yue Li</p>
+          </div>
+          <div class="column">
+              <p>Yueliang Zhang</p>
+              <p>Yumeng Lin</p>
+              <p>Yunwei Meng</p>
+              <p>Yuxiang Liu</p>
+          </div>
+          <div class="column">
+              <p>Zhen Mo</p>
+              <p>Zhen Ouyang</p>
+              <p>Ziling Chen</p>
+          </div>
+      </div>
 
 <h2>Contact</h2>
