--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
         .container {
             display: flex;
             justify-content: space-between;
+        flex-warp: row;
         }
         .column {
-            flex: 1;
-            margin: 0 10px;
+/*             flex: 1;
+            margin: 0 10px; */
             text-align: left;
         }
     </style>
