--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
             justify-content: space-between;
         flex-warp: row;
         }
-        .column {
+        .container div {
 /*             flex: 1;
             margin: 0 10px; */
+                
             text-align: left;
         }
     </style>
@@ -29,12 +30,10 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
 
 <h2>Acknowledge</h2>
   <div class="container">
-          <div class="column">
-              <p>Bosen Miao</p>
-              <p>Cairang Nima</p>
-              <p>Chen Zhang</p>
-              <p>Chenyang Zhang</p>
-          </div>
+              <div>Bosen Miao</div>
+              <div>Cairang Nima</div>
+              <div>Chen Zhang</div>
+              <div>Chenyang Zhang</div>
           <div class="column">
               <p>Chenxi Feng</p>
               <p>Dayu Gan</p>
