--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
               <div>Cairang Nima</div>
               <div>Chen Zhang</div>
               <div>Chenyang Zhang</div>
-          <div class="column">
-              <p>Chenxi Feng</p>
-              <p>Dayu Gan</p>
-              <p>Fan Wu</p>
-              <p>Fengting Wang</p>
+      </div>
+
+<div class="container">
+              <div>Chenxi Feng</div>
+              <div>Dayu Gan</div>
+              <div>Fan Wu</div>
+              <div>Fengting Wang</div>
           </div>
-          <div class="column">
+<!--           <div class="column">
               <p>Guanhong Su</p>
               <p>Haiquan Yu</p>
               <p>Haodong Qian</p>
@@ -122,7 +124,6 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
               <p>Zhen Mo</p>
               <p>Zhen Ouyang</p>
               <p>Ziling Chen</p>
-          </div>
-      </div>
+          </div> -->
 
 <h2>Contact</h2>
