--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
         .container div {
 /*             flex: 1;
             margin: 0 10px; */
-                
+        width: 25%;
             text-align: left;
         }
     </style>
