--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
 <style>
         .container {
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-start;
         flex-warp: row;
+                width:100%;
         }
         .container div {
 /*             flex: 1;
