--- a/index.html
+++ b/index.html
@@ -43,88 +43,88 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
               <div>Fan Wu</div>
               <div>Fengting Wang</div>
           </div>
-<!--           <div class="column">
-              <p>Guanhong Su</p>
-              <p>Haiquan Yu</p>
-              <p>Haodong Qian</p>
-              <p>Haitao Huang</p>
-          </div>
-          <div class="column">
-              <p>Han Xiang</p>
-              <p>Hongfu Qi</p>
-              <p>Hui Liu</p>
-              <p>Jiabin Huang</p>
-          </div>
-          <div class="column">
-              <p>Jiajia Zhang</p>
-              <p>Jiahui Zhou</p>
-              <p>Jiamin Tang</p>
-              <p>Jiayu Zou</p>
-          </div>
-          <div class="column">
-              <p>Junjie Gao</p>
-              <p>Kejun Chen</p>
-              <p>Kangxian Lu</p>
-              <p>Lili Mu</p>
-          </div>
-          <div class="column">
-              <p>Liyan Liu</p>
-              <p>Liwen Zhu</p>
-              <p>Mingyu Yang</p>
-              <p>Peilin Cai</p>
-          </div>
-          <div class="column">
-              <p>Rouyi Hou</p>
-              <p>Sha Liu</p>
-              <p>Shuoyuan Jing</p>
-              <p>Siqi Tao</p>
-          </div>
-          <div class="column">
-              <p>Tianshuo Chen</p>
-              <p>Wenjie Yu</p>
-              <p>Wenkai Deng</p>
-              <p>Wentao Mou</p>
-          </div>
-          <div class="column">
-              <p>Xianxia Shi</p>
-              <p>Xicheng Fan</p>
-              <p>Xiling Wei</p>
-              <p>Xing Chen</p>
-          </div>
-          <div class="column">
-              <p>Xiru Ruan</p>
-              <p>Xueqing Liu</p>
-              <p>Yangyang Li</p>
-              <p>Yan Li</p>
-          </div>
-          <div class="column">
-              <p>Yanli Lin</p>
-              <p>Ying Tao</p>
-              <p>Yingqi Liang</p>
-              <p>Yingwen Shi</p>
-          </div>
-          <div class="column">
-              <p>Yingshuai Xu</p>
-              <p>Yixiao Wu</p>
-              <p>Yijing Dai</p>
-              <p>Yixiao Wu</p>
-          </div>
-          <div class="column">
-              <p>Yongxu Zhu</p>
-              <p>Yu Pang</p>
-              <p>Yuanqian Xiao</p>
-              <p>Yue Li</p>
-          </div>
-          <div class="column">
-              <p>Yueliang Zhang</p>
-              <p>Yumeng Lin</p>
-              <p>Yunwei Meng</p>
-              <p>Yuxiang Liu</p>
-          </div>
-          <div class="column">
-              <p>Zhen Mo</p>
-              <p>Zhen Ouyang</p>
-              <p>Ziling Chen</p>
-          </div> -->
+          <div class="container">
+    <div>Guanhong Su</div>
+    <div>Haiquan Yu</div>
+    <div>Haodong Qian</div>
+    <div>Haitao Huang</div>
+</div>
+<div class="container">
+    <div>Han Xiang</div>
+    <div>Hongfu Qi</div>
+    <div>Hui Liu</div>
+    <div>Jiabin Huang</div>
+</div>
+<div class="container">
+    <div>Jiajia Zhang</div>
+    <div>Jiahui Zhou</div>
+    <div>Jiamin Tang</div>
+    <div>Jiayu Zou</div>
+</div>
+<div class="container">
+    <div>Junjie Gao</div>
+    <div>Kejun Chen</div>
+    <div>Kangxian Lu</div>
+    <div>Lili Mu</div>
+</div>
+<div class="container">
+    <div>Liyan Liu</div>
+    <div>Liwen Zhu</div>
+    <div>Mingyu Yang</div>
+    <div>Peilin Cai</div>
+</div>
+<div class="container">
+    <div>Rouyi Hou</div>
+    <div>Sha Liu</div>
+    <div>Shuoyuan Jing</div>
+    <div>Siqi Tao</div>
+</div>
+<div class="container">
+    <div>Tianshuo Chen</div>
+    <div>Wenjie Yu</div>
+    <div>Wenkai Deng</div>
+    <div>Wentao Mou</div>
+</div>
+<div class="container">
+    <div>Xianxia Shi</div>
+    <div>Xicheng Fan</div>
+    <div>Xiling Wei</div>
+    <div>Xing Chen</div>
+</div>
+<div class="container">
+    <div>Xiru Ruan</div>
+    <div>Xueqing Liu</div>
+    <div>Yangyang Li</div>
+    <div>Yan Li</div>
+</div>
+<div class="container">
+    <div>Yanli Lin</div>
+    <div>Ying Tao</div>
+    <div>Yingqi Liang</div>
+    <div>Yingwen Shi</div>
+</div>
+<div class="container">
+    <div>Yingshuai Xu</div>
+    <div>Yixiao Wu</div>
+    <div>Yijing Dai</div>
+    <div>Yixiao Wu</div>
+</div>
+<div class="container">
+    <div>Yongxu Zhu</div>
+    <div>Yu Pang</div>
+    <div>Yuanqian Xiao</div>
+    <div>Yue Li</div>
+</div>
+<div class="container">
+    <div>Yueliang Zhang</div>
+    <div>Yumeng Lin</div>
+    <div>Yunwei Meng</div>
+    <div>Yuxiang Liu</div>
+</div>
+<div class="container">
+    <div>Zhen Mo</div>
+    <div>Zhen Ouyang</div>
+    <div>Ziling Chen</div>
+</div>
 
 <h2>Contact</h2>
