--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
 
 <!-- <h2>Citation</h2> -->
 
-<h2>Acknowledge</h2>
+<h2>Acknowledgement</h2>
+<div><strong>Annotators (Sorted Alphabetically):</strong></div>
   <div class="container">
               <div>Bosen Miao</div>
               <div>Cairang Nima</div>
