--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: FairPACS
+title: Face4FairShifts
 subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
 ---
 <style>
