--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Face4FairShifts
-subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
+subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Guihong Wan, Chen Zhao
 ---
 <style>
         .container {
@@ -129,3 +129,5 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Chen Zhao
 </div>
 
 <h2>Contact</h2>
+
+meviuslab@gmail.com
