--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Guihong Wan, Chen Zhao
 
 <h2>Sample Images</h2>
 
+<img src="assets/img/DataExp.pdf" alt="PDF Preview">
+
 <h2>Downloads</h2>
 
 <h2>Agreement</h2>
