--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Guihong Wan, Chen Zhao
 
 <h2>Sample Images</h2>
 
-<img src="assets/img/DataExp.pdf" alt="PDF Preview">
+<img src="assets/img/DataExp.png" alt="Sample Images">
 
 <h2>Downloads</h2>
 
