--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Guihong Wan, Chen Zhao
     </style>
 
 <h2>Details</h2>
+<img src="assets/img/Statistic.png" alt="Statistics">
 
 
 <h2>Sample Images</h2>
@@ -26,8 +27,9 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Guihong Wan, Chen Zhao
 <img src="assets/img/DataExp.png" alt="Sample Images">
 
 <h2>Downloads</h2>
+The dataset will be realeased upon acceptance.
 
-<h2>Agreement</h2>
+<!-- <h2>Agreement</h2> -->
 
 <!-- <h2>Citation</h2> -->
 
