--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Guihong Wan, Chen Zhao
     </style>
 
 <h2>Details</h2>
+The dataset includes 100,000 images across four visually distinct domains with 39 annotations within 14 attributes covering demographic and facial features.<br>
+
 <img src="assets/img/Statistic.png" alt="Statistics">
 
 
