--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: home
 title: Face4FairShifts
-subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Guihong Wan, Chen Zhao
+subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Xujiang Zhao, Zhong Chen, Chen Zhao
 ---
 <style>
         .container {
@@ -19,7 +19,7 @@ subtitle: Yumeng Lin*, Dong Li*, Xintao Wu, Minglai Shao, Guihong Wan, Chen Zhao
     </style>
 
 <h2>Details</h2>
-The dataset includes 100,000 images across four visually distinct domains with 39 annotations within 14 attributes covering demographic and facial features.<br>
+The dataset includes 100,000 images across four visually distinct domains with 42 annotations within 15 attributes covering demographic and facial features.<br>
 
 <img src="assets/img/Statistic.png" alt="Statistics">
 
