--- a/index.html
+++ b/index.html
@@ -29,7 +29,14 @@ The dataset includes 100,000 images across four visually distinct domains with 4
 <img src="assets/img/DataExp.png" alt="Sample Images">
 
 <h2>Downloads</h2>
-The dataset will be realeased upon acceptance.
+<ul>
+        <li>The Face4FairShifts dataset: <a href="url">here</a> </li>
+        <li>A croissant metadata: <a href="url">here</a></li>
+</ul>
+
+
+
+
 
 <!-- <h2>Agreement</h2> -->
 
