--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@ The dataset includes 100,000 images across four visually distinct domains with 4
 
 <h2>Downloads</h2>
 <ul>
-        <li>The Face4FairShifts dataset: <a href="url">here</a> </li>
-        <li>A croissant metadata: <a href="url">here</a></li>
+        <li>The Face4FairShifts Dataset: <a href="url">here</a> </li>
+        <li>A Croissant Format Metadata: <a href="url">here</a></li>
+        <li>Code Repository: <a href="https://github.com/TurkeyWatanabe/FairDistBench">here</a> </li>
 </ul>
 
 
