--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@ The dataset includes 100,000 images across four visually distinct domains with 4
 
 <h2>Downloads</h2>
 <ul>
-        <li>The Face4FairShifts Dataset: <a href="https://pan.baidu.com/s/1aQ4aVsAOMPR6ae4_c0ZGZA?pwd=z8da">here</a>; Password: z8da  </li>
+        <li>The Face4FairShifts Dataset:  </li>
+        <ul>
+                <li> Baidu Netdisk: <a href="https://pan.baidu.com/s/1aQ4aVsAOMPR6ae4_c0ZGZA?pwd=z8da">here</a>; Password: z8da </li>
+                <li> Hugging Face: <a href="https://huggingface.co/datasets/LYM619/Face4FairShifts">here</a></li>
+        </ul>/
         <li>A Croissant Format Metadata: <a href="url">here</a></li>
         <li>Code Repository: <a href="https://github.com/TurkeyWatanabe/FairDistBench">here</a> </li>
 </ul>
