--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ The dataset includes 100,000 images across four visually distinct domains with 4
                 <li> Hugging Face: <a href="https://huggingface.co/datasets/LYM619/Face4FairShifts">here</a></li>
         </ul>
         <li>A Croissant Format Metadata: <a href="https://huggingface.co/datasets/LYM619/Face4FairShifts/blob/main/croissant/metadata.json">here</a></li>
-        <li>Full Distribution of Annotations: here</li>
+        <li>Full Distribution of Annotations: <a href="https://pan.baidu.com/s/1TH2ERv-jg3xoElT6WRjVKA?pwd=q4ai">here</a>; Password: q4ai</li>
         <li>Code Repository: <a href="https://github.com/TurkeyWatanabe/FairDistBench">here</a> </li>
 </ul>
 
