--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ The dataset includes 100,000 images across four visually distinct domains with 4
 
 
 
-<h2>Agreement</h2>
+<h2>User Agreement</h2>
 <ul>
         <li>The FACE4FAIRSHIFTS dataset is available for non-commercial research purposes only.</li>
         <li>All images of the FACE4FAIRSHIFTS dataset are obtained from the Internet and are not the property of the authors' affiliated institutions. These institutions are not responsible for the content or the meaning of these images.</li>
